# rag-from-scratch

./: README.md  pyproject.toml
Docker/: docker-compose.yml
Instructions/: ai-engineer-roadmap.md
Testing/: test_testup.py
src/: ingest.py
src/data/: 01_foreword.json  01_foreword.md  02_preface.json  02_preface.md  03_part-I-introduction.json  03_part-I-introduction.md  04_introduction.json  04_introduction.md  05_production-environment.json  05_production-environment.md  06_part-II-principles.json  06_part-II-principles.md  07_embracing-risk.json  07_embracing-risk.md  08_service-level-objectives.json  08_service-level-objectives.md  09_eliminating-toil.json  09_eliminating-toil.md  10_monitoring-distributed-systems.json  10_monitoring-distributed-systems.md  11_automation-at-google.json  11_automation-at-google.md  12_release-engineering.json  12_release-engineering.md  13_simplicity.json  13_simplicity.md  14_part-III-practices.json  14_part-III-practices.md  15_practical-alerting.json  15_practical-alerting.md  16_being-on-call.json  16_being-on-call.md  17_effective-troubleshooting.json  17_effective-troubleshooting.md  18_emergency-response.json  18_emergency-response.md  19_managing-incidents.json  19_managing-incidents.md  20_postmortem-culture.json  20_postmortem-culture.md  (+56 more)
