[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.1",
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
]
